<resources>
    <string name="app_name">DailyNeed</string>

    <string name="login_as">Login as</string>
    <string name="user">User</string>
    <string name="shop">Shop</string>
    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="forget">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="register_email">Enter Your Registered Email</string>
    <string name="email_address">Email Address</string>

    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="facebook_app_id">696920117801370</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register"><u>Register</u></string>
    <string name="login_under"><u>Login</u></string>
    <string name="title_activity_add_item_in_shop">AddItemInShop</string>


</resources>
