<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".common.LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_centerInParent="true"

            android:orientation="vertical">


            <!--<LinearLayout android:layout_width="match_parent"-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_height="wrap_content">-->

            <!--</LinearLayout>-->
            <EditText
                android:id="@+id/email_id_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="25dp"
                android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
                android:drawablePadding="15dp"
                android:hint="@string/email"
                android:inputType="text"
                android:paddingBottom="20dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="15dp"

                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="20dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/forget"
                android:textColor="@color/orange" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/facebook_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1">

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/fb_login_button"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:visibility="gone"

                        />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/round_blue">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="17dp"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:layout_marginRight="40dp"
                            android:layout_toLeftOf="@id/facebook_text"
                            android:src="@drawable/ic_icons8_facebook_f" />

                        <TextView
                            android:id="@+id/facebook_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center"
                            android:layout_marginLeft="12dp"
                            android:text="@string/facebook"
                            android:textColor="@color/blue" />

                    </FrameLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/gmail_relative"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1">

                    <com.google.android.gms.common.SignInButton
                        android:id="@+id/btn_sign_in"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:visibility="gone"


                        />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/round_red_corner"
                        android:visibility="visible">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="15dp"
                            android:layout_centerVertical="true"
                            android:layout_gravity="center"
                            android:layout_marginRight="40dp"
                            android:layout_toLeftOf="@id/gmail_text"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_google_01" />

                        <TextView
                            android:id="@+id/gmail_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center"
                            android:layout_marginLeft="12dp"
                            android:text="@string/google"
                            android:textColor="@color/red" />
                    </FrameLayout>
                </RelativeLayout>
            </LinearLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/orange"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/login"
                android:textAlignment="gravity"
                android:textColor="@android:color/white"
                android:textSize="18dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="Don't have an account?   "
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/login_register_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"

                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>
</ScrollView>