<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".common.UserTypeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/login_as"
            android:textColor="@color/black"
            android:textSize="16sp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"

            >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_130dp"

                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/user_type"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/filter_ads_timing_background">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="50dp"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/ic_brocker_black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user" />
                    </LinearLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_130dp"

                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/shop_type"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/filter_green_background">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="50dp"

                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/ic_installer_white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shop"

                            android:textColor="@color/white" />

                    </LinearLayout>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>